syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {}
  rpc GetAllProduct (Empaty) returns (GetAllProductResponse){}
  
}

// CreateProduct

message CreateProductRequest {
  string name = 1;
  string sku = 2;
  int32 stock = 3;
  double price = 4;
}

message Empaty {

}
message GetAllProductResponse {
    int32 statusCode=1;
    repeated CreateProductRequest data=2;


}


message CreateProductResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 id = 3;
}
